@@ -4,7 +4,7 @@
 mgd77list \- A data-extractor for MGD77[+] files
 .SH SYNOPSIS
 \fBmgd77list\fP \fINGDC-ids\fP OPT(F)\fIcolumns\fP[,\fIlogic\fP][:\fIbittests\fP] 
-[ OPT(Ac)|\fBd\fP|\fBf\fP|\fBm\fP\fIcode\fP ] [ OPT(C)\fBf\fP|\fBg\fP|\fBe\fP ] 
+[ OPT(A)[\fB+\fP]\fBc\fP|\fBd\fP|\fBf\fP|\fBm\fP\fIcode\fP ] [ OPT(C)\fBf\fP|\fBg\fP|\fBe\fP ] 
 [ OPT(Da)\fIstartdate\fP ] [ OPT(Db)\fIstopdate\fP ] [ OPT(E) ] [ OPT(Ga)\fIstartrec\fP ] [ OPT(Gb)\fIstoprec\fP ] 
 [ GMT_H_OPT ] [ OPT(I)\fIignore\fP ] [ OPT(X)[\fIcorrtable\fP] ] [ GMT_Mo_OPT ] 
 [ OPT(Nd)|\fBs\fP\fIunit\fP ] [ OPT(Q)\fBa\fP|\fBv\fP\fImin\fP/\fImax\fP ] [ GMT_Rgeo_OPT ] [ OPT(Sa)\fIstartdist\fP[unit] ] 
@@ -208,6 +208,8 @@ one procedure for a data column by summing their numerical \fIcode\fPs
 estimate a Carter correction but if \fBdepth\fP is NaN we will next try
 \fB\-Ac\fP2 which only uses \fBtwt\fP.  In all cases, if any of the values
 required by an adjustment procedure is NaN then the result will be NaN.
+This is also true if the original anomaly is NaN.  Specify OPT(A+) to
+recalculate anomalies even if the anomaly in the file is NaN.
 .TP
 .B \-Ac
 Determines how the \fBcarter\fP correction term is calculated.  Below, 
@@ -406,6 +408,11 @@ but recalculate the two residuals based on the latest reference fields, try:
 .br
 .sp
 \fBmgd77list\fP `cat cruises.lis` \fB\-F\fPlon,lat,mag,faa \fB\-Af\fP2,4 \fB\-Am\fP2 > data.d
+.SH RECALCUATED ANOMALIES
+When recalculated anomalies are requested (either explicitly via the OPT(A) option or implicitly
+via E77 metadata in the MGD77+ file) we only do so for the records whose original anomaly was
+not a NaN.  This restriction is implemented since many anomaly columns contains corrections, usually
+in the form of hand-edited changes, that cannot be duplicated from the corresponding observation.
 .SH IGRF
 The IGRF calculations are based on a Fortran program written by Susan Macmillan,
 British Geological Survey, translated to C via f2c by Joaquim Luis, U Algarve, and adapted to
